--- a/practice2/react/Login.html
+++ b/practice2/react/Login.html
@@ -72,11 +72,62 @@
         }
     }
 
+    class LoginBox extends React.Component{
+        state = {
+            userid:'',
+            userpw:''
+        }
+        handleChange = (e) => {
+            this.setState({[e.target.name]:e.target.value})
+        }
+        handleSubmit = (e) => {
+            e.preventDefault()
+            this.props.onCreate(this.state)
+            this.setState({
+                userid:'',
+                userpw:''
+            })
+        }
+        render(){
+            return(
+                <form onSubmit={this.handleSubmit}>
+                    <input
+                        type="text"
+                        placeholder="아이디를 입력해주세요"
+                        value={this.state.userid}
+                        onChange={this.handleChange}
+                        name="userid"
+                    />
+                    <input
+                        type="password"
+                        placeholder="패스워드를 입력해주세요"
+                        value={this.state.userpw}
+                        onChange={this.handleChange}
+                        name="userpw"
+                    />
+                    <button type="submit">로그인</button>
+                </form>
+
+            )
+        }
+    }
+
     class App extends React.Component{
         state = {
             isLogin:false,
         }
-       render(){
+
+        handleDelete = () => {
+            this.setState({isLogin:false})
+        }
+
+        handleCreate = data => {
+            let {userid,userpw} = data
+            if(userid==='algml'&&userpw==='algml'){
+                this.setState({isLogin:true})
+            }
+        }
+        render(){
            return(
                <>
                     <Header>
@@ -85,7 +136,7 @@
                         <p>hello p</p>
                         <Utill isLogin={this.state.isLgoin} onDelete={this.handleDelete}/>
                     </Header>
-                    {this.state.isLogin?'':'false'}
+                    {this.state.isLogin?'':<LoginBox onCreate={this.handleCreate}/>}
                </>
            )
        }
